--- a/6-eventos/retoCinco.html
+++ b/6-eventos/retoCinco.html
@@ -4,34 +4,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Reto Cinco</title>
 </head>
 
 <body>
     <style>
-        .teacher--selected {
-            background-color: aqua;
+        .teachers {
+            list-style: none;
         }
         
-        .favorite {
-            background-color: blueviolet;
+        .prof {
+            display: inline-block;
+            cursor: pointer;
+            padding: 2px;
+        }
+        
+        .teacher--selected {
+            background-color: rgb(136, 20, 126);
         }
     </style>
 
-    <section class="targ1" id="tid1">
-        <li class="tar1" id="ti1"></li>
-        <span></span>
-    </section>
-
-    <section class="targ2" id="tid2">
-        <li class="tar2" id="ti2"></li>
-        <span></span>
-    </section>
-
-    <section class="targ3" id="tid3">
-        <li class="tar3" id="ti3"></li>
-        <span></span>
-    </section>
+    <ul class="teachers">
+        <li class="prof teacher--uno">
+            <div>Heriberto</div>
+            <div class="favorite">Añadir</div>
+        </li>
+        <li class="prof teacher--dos">
+            <div>Camilo</div>
+            <div class="favorite">Añadir</div>
+        </li>
+        <li class="prof teacher--tres">
+            <div>Christian</div>
+            <div class="favorite">Añadir</div>
+        </li>
+    </ul>
     <script type="text/javascript " src="retoCinco.js "></script>
 
 </body>
