--- a/6-eventos/retoSiete.html
+++ b/6-eventos/retoSiete.html
@@ -1,28 +1,19 @@
-<!--  Vamos a partir de un HTML con un botón 'Empezar'. Al hacer click, vamos a pintar en el HTML un listado de películas que tenemos en JavaScript:
- -->
-
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reto Dos</title>
+    <title>Reto Siete</title>
 </head>
 
 <body>
-    <input type="button" class="btn" name="text" value="Empezar"><br>
-    <div id="txt"></div>
-    <ul>
-        <li class="pe1">Inception</li>
-        <li class="pe2">The butterfly effect</li>
-        <li class="pe3">Eternal sunshine of the spotless mind</li>
-        <li class="pe4">Blue velvet</li>
-        <li class="pe5">Split</li>
+
+    <button id="start" name="start">Empezar</button>
+    <ul id="list">
     </ul>
-
-    <script type="text/javascript " src="retoCuatro.js "></script>
-
+    <h1 id="pelicula"></h1>
+    <script type="text/javascript" src="retoSiete.js"></script>
 </body>
 
 </html>
